--- a/src/.vscode/launch.json
+++ b/src/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/bin/Debug/net5.0/Prob.dll",
+            "program": "${workspaceFolder}/bin/Debug/net5.0/Prob.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/src",
+            "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
@@ -22,21 +22,15 @@
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             },
-            "justMyCode": true,
-            "symbolOptions": {
-                "searchPaths": [],
-                "searchMicrosoftSymbolServer": true,
-                "searchNuGetOrgSymbolServer": false
-            },
-            "suppressJITOptimizations": true,
-            "sourceLinkOptions": {
-                "*": {
-                    "enabled": true
-                }
-            },
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
             }
+        },
+        {
+            "name": ".NET Core Attach",
+            "type": "coreclr",
+            "request": "attach",
+            "processId": "${command:pickProcess}"
         }
     ]
 }
