--- a/test/.netconfig
+++ b/test/.netconfig
@@ -1,11 +1,11 @@
 [ReportGenerator]
-  reports=testresults/**/coverage.cobertura.xml
+  reports=TestResults/**/coverage.cobertura.xml
   reporttype = HtmlChart
   reporttype = Html
   reporttype = Badges
   reporttype = PngChart
   targetdir = coverage/report
   historydir = coverage/history
-  classfilters = -HowToUseXUnit.Program
+  classfilters = -Prob.Program
   title = Unit Test 2 
   verbosity = Verbose
