change the handling of dev-cert

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,3 +1,7 @@
+#
+# build stage
+#
+
 # https://hub.docker.com/_/microsoft-dotnet
 FROM mcr.microsoft.com/dotnet/sdk:5.0.202 AS build
 WORKDIR /source
@@ -10,10 +14,22 @@ RUN dotnet restore
 COPY . .
 RUN dotnet publish -c release -o /app --no-restore
 
-# final stage/image
+#
+# final stage
+#
+
+# use runtime base image
 FROM mcr.microsoft.com/dotnet/aspnet:5.0.5
+
+# set executable assembly name from build arg
 ARG app
 ENV APP_DLL=$app
+
+# copy dev-certs
+RUN mkdir /https
+COPY aspnetapp.pfx /https/aspnetapp.pfx
+
+# copy all published files
 WORKDIR /app
 COPY --from=build /app ./
 ENTRYPOINT dotnet $APP_DLL
