--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     ports:
       - 8090:8080
       - 8091:8081
+    env_file:
+      - .env
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_HTTPS_PORT=8091
