--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -37,10 +37,18 @@ COPY --from=build /app ./
 RUN addgroup --system --gid 1000 appgroup \
     && adduser --system --uid 1000 --ingroup appgroup --shell /bin/sh appuser
 
+# install basic tools
+RUN apt-get update && \
+    apt-get install -y sudo && \
+    echo 'appuser ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers && \
+    apt-get install -y curl
+
 # publish 8080 for HTTP, 8081 for HTTPS
-ENV ASPNETCORE_URLS=http://+:8080
 ENV ASPNETCORE_URLS=https://+:8081;http://+:8080
+
+# let ASP.NET know the (external) HTTPS port number
 ENV ASPNETCORE_HTTPS_PORT=8081
+
 EXPOSE 8080
 EXPOSE 8081
 
