--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       args:
         - app=Prob.dll
     image: ${APP_TAG}
+    container_name: prob
     ports:
       - 8090:8080
       - 8091:8081
