--- a/src/k8s/k8s/options/prob-externaldns.yml
+++ b/src/k8s/k8s/options/prob-externaldns.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: external-dns
+  namespace: external-dns
   # If you're using Amazon EKS with IAM Roles for Service Accounts, specify the following annotation.
   # Otherwise, you may safely omit it.
   annotations:
@@ -34,12 +35,13 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: external-dns
-    namespace: prob
+    namespace: external-dns
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: external-dns
+  namespace: external-dns
 spec:
   strategy:
     type: Recreate
