update manifests and README.md

--- a/src/k8s/chart/templates/options/prob-externaldns.yml
+++ b/src/k8s/chart/templates/options/prob-externaldns.yml
@@ -9,7 +9,7 @@ metadata:
   # Otherwise, you may safely omit it.
   annotations:
     # Substitute your account ID and IAM service role name below.
-    eks.amazonaws.com/role-arn: arn:aws:iam::372853230800:role/eksctl-eks-worker-cluster-addon-iamserviceac-Role1-1ODA5USQRYD6E
+    eks.amazonaws.com/role-arn: {{ .Values.externalDns.roleArn }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -44,7 +44,6 @@ kind: Deployment
 metadata:
   name: external-dns
   namespace: {{ .Values.externalDns.namespace }}
----
 spec:
   strategy:
     type: Recreate
