--- a/src/k8s/k8s/kustomization.yaml
+++ b/src/k8s/k8s/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - prob-deploy.yml
-  - prob-ing-ip.yml
+  - prob-deploy.yaml
+  - prob-ing-ip.yaml
